--- a/app/templates/pages/contact.html
+++ b/app/templates/pages/contact.html
@@ -1,4 +1,8 @@
 {% extends "conteneur.html" %}
 {% block corps %}
-<p>Page de contact</p>
+<div class="contact-global">
+    <h1>Contact</h1>
+    <p>Ce site est un projet développé dans le cadre d'un enseignement. Si vous avez des remarques ou désirez des informations complémentaires à son sujet, vous pouvez écrire à : <mark style="color: blue;background-color: inherit;">jean-damien.genero [at] chartes [.] psl [.] eu</mark></p>
+</div>
+
 {% endblock %}
