--- a/app/templates/pages/error404.html
+++ b/app/templates/pages/error404.html
@@ -22,7 +22,7 @@
 		</div>
 		<div style="padding-left: 5%; margin-top: 5%; text-align: justify;">
 			<p>Vous vous êtes perdu ! Un peu comme le chevalier du <i>Livre du Coeur d'amour épris</i> devant ce portail surmonté d'une trentaine d'écus... D'ailleurs, sauriez-vous retrouver celui de Charles I<sup>er</sup> ? Cliquer dessus vous permettra de retourner à l'accueil !</p>
-			<p>Et si l'héraldique médiévale ne vous est pas familière, <a href="{{url_for('accueil')}}">vous pouvez toujours cliquer ici pour retourner à l'accueil</a>.</p>
+			<p>Et si l'héraldique médiévale ne vous est pas familière, <a href="{{url_for('accueil')}}">vous pouvez toujours cliquer ici</a>.</p>
 		</div>
 	</div>
 </div>
