--- a/app/static/css/css.css
+++ b/app/static/css/css.css
@@ -307,6 +307,7 @@ a:hover {
     flex-direction: row;
     font-family: 'Open Sans', sans-serif;
     margin-top: 3%;
+    margin-bottom: 3%;
 }
 
 .projet-desc-img-global {
