--- a/app/templates/pages/corpus.html
+++ b/app/templates/pages/corpus.html
@@ -5,7 +5,11 @@
         <div>
             <h2 class="h2_global">Présentation du corpus</h2>
             <p>Le corpus des actes de Charles I<sup>er</sup> de Bourbon et d'Agnès de Bourgogne se compose de 405 documents, dont 373 sont passés au nom du duc et 32 au nom de la duchesse ; parmi ceux-ci, le couple ducal passe six actes en commun.</p>
-            <p>L'ensemble du corpus n'a pas pu être mis en ligne. À ce jour, cette apptdcation compte {{acte|length}} actes enregistrés.</p>
+            <p>Seul un échantillon du corpus a été mis en ligne. À ce jour, cette application compte <b>{{acte|length}} actes</b> enregistrés.</p>
+        </div>
+        <div>
+            <h2 class="h2_global">Méthode d'édition</h2>
+            <p>L'édition est diplomatique.</p>
         </div>
         <div>
             <h2 class="h2_global">Liste des actes</h2>
