pages sommaire enlevées

--- a/app/templates/conteneur.html
+++ b/app/templates/conteneur.html
@@ -17,12 +17,11 @@
                   <button class="dropbtn">Projet</button>
                   <div class="dropdown-content">
                     <a href="{{url_for('projet')}}">À propos</a>
-                    <a href="{{url_for('corpus')}}">Corpus</a>
                     <a href="{{url_for('bibliographie')}}">Bibliographie</a>
                   </div>
                 </li>
                 <li><a href="{{url_for('duc')}}">Le&nbsp;duc</a></li>
-                <li><a href="{{url_for('sommaire')}}">Actes</a></li>
+                <li><a href="{{url_for('corpus')}}">Actes</a></li>
                 <li class="dropdown">
                   <button class="dropbtn">Index</button>
                   <div class="dropdown-content">
