--- a/app/static/css/css.css
+++ b/app/static/css/css.css
@@ -28,6 +28,16 @@ a:hover {
     z-index: 1030;
 }
 
+.nav-form {
+    display: flex;
+    flex-direction: row;
+    margin-left: 3%;
+}
+
+.nav-form-input {
+    margin-right: 0%;
+}
+
 .nav-item {
     display: flex;
     flex-direction: row;
