recherche avancée >> recherche

--- a/app/templates/conteneur.html
+++ b/app/templates/conteneur.html
@@ -25,7 +25,7 @@
                   <button class="dropbtn">Actes</button>
                   <div class="dropdown-content">
                     <a href="{{url_for('corpus')}}">Liste des actes</a>
-                    <a href="{{url_for('recherche')}}">Recherche avancée</a>
+                    <a href="{{url_for('recherche')}}">Recherche</a>
                   </div>
                 </li>
                 <li class="dropdown">
