--- a/app/templates/pages/recherche.html
+++ b/app/templates/pages/recherche.html
@@ -1,7 +1,7 @@
 {% extends "conteneur.html" %}
 {% block corps %}
-<div class="contact-global">
-    	<h1>Recherche avancée</h1>
+<div class="result-global">
+    	<h1 class="h1_global">Rechercher dans le corpus</h1>
     	<form class="form-inline" action="{{url_for('resultats')}}" method="GET">
 			Année : 
         	<input name="keyword_year" type="search" placeholder="Année" aria-label="Recherche"> 
