--- a/app/static/css/css.css
+++ b/app/static/css/css.css
@@ -1,10 +1,10 @@
 /* LIENS */
-a:link {
+a:link, a:visited {
     text-decoration: none;
     color: black;
 }
 
-a:hover {
+a:hover, a:active {
     text-decoration: none;
     color: #B1B0B0;
 }
@@ -41,21 +41,6 @@ a:hover {
     list-style: none;
     width: 100%;
     flex-wrap: wrap;
-}
-
-.nav-global > a {
-    margin-right: 5%;
-    margin-left: 1%;
-    text-decoration: none;
-}
-
-.nav-item > li > a {
-    text-decoration: none;
-}
-
-.nav-global > a:hover, .nav-item > li > a:hover {
-    color: #B1B0B0;
-    text-decoration: none;
 }
 
 /* DROPDOWN > https://www.w3schools.com/howto/howto_css_dropdown.asp */
@@ -576,8 +561,11 @@ blockquote p::after {
 
 /* RESULTATS */
 .result-global {
+    display: flex;
+    flex-direction: column;
     margin-top: 3%;
     margin-bottom: 3%;
+    font-family: 'Open Sans', sans-serif;
 }
 
 .result-item {
